k8s/prod/code.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saas-travel-frontend
  labels:
    app: saas-travel-frontend
    stage: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: saas-travel-frontend
  template:
    metadata:
      labels:
        app: saas-travel-frontend
        stage: prod
    spec:
      containers:
        - name: saas-travel-frontend
          image: asia.gcr.io/partnerlink-h2h/saas-travel-frontend:latest
          imagePullPolicy: "Always"
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 200m
              memory: 300Mi
            limits:
              cpu: 500m
              memory: 500Mi
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 60
            timeoutSeconds: 30
            successThreshold: 1
      nodeSelector:
        node-pool: prod

---

apiVersion: v1
kind: Service
metadata:
  name: svc-saas-travel-frontend
spec:
  ports:
  - name: svc-saas-travel-frontend
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: saas-travel-frontend
  type: NodePort

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: saas-travel-frontend
spec:
  tls:
    - hosts:
      - travel.rajabiller.com
      secretName: cert-rajabiller-com
  rules:
    - host: travel.rajabiller.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: svc-saas-travel-frontend
                port:
                  number: 80
  ingressClassName: nginx-public-ext
